[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Solutions to problems from Advent of Code"
authors = ["Michael Gallagher <11604739+michaeljgallagher@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
anyio = "4.6.2.post1"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.3.0"
asttokens = "3.0.0"
async-lru = "2.0.4"
attrs = "24.2.0"
babel = "2.16.0"
beautifulsoup4 = "4.12.3"
black = "24.10.0"
bleach = "6.2.0"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
click = "8.1.7"
comm = "0.2.2"
contourpy = "1.3.1"
cycler = "0.12.1"
debugpy = "1.8.9"
decorator = "5.1.1"
defusedxml = "0.7.1"
executing = "2.1.0"
fastjsonschema = "2.21.0"
fonttools = "4.61.0"
fqdn = "1.5.1"
h11 = "0.16.0"
httpcore = "^1.0.9"
httpx = "0.28.0"
idna = "3.10"
ipykernel = "6.29.5"
ipython = "8.30.0"
isoduration = "20.11.0"
isort = "5.13.2"
jedi = "0.19.2"
jinja2 = "3.1.6"
json5 = "0.10.0"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
jupyter-black = "0.4.0"
jupyter-events = "0.10.0"
jupyter-lsp = "2.2.5"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
jupyter-server = "2.14.2"
jupyter-server-terminals = "0.5.3"
jupyterlab = "4.4.8"
jupyterlab-pygments = "0.3.0"
jupyterlab-server = "2.27.3"
kiwisolver = "1.4.7"
markupsafe = "3.0.2"
matplotlib = "3.10.0"
matplotlib-inline = "0.1.7"
mistune = "3.0.2"
mpmath = "1.3.0"
mypy-extensions = "1.0.0"
nbclient = "0.10.1"
nbconvert = "7.16.4"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
networkx = "3.4.2"
notebook-shim = "0.2.4"
numpy = "2.2.0"
overrides = "7.7.0"
packaging = "24.2"
pandocfilters = "1.5.1"
parso = "0.8.4"
pathspec = "0.12.1"
pexpect = "4.9.0"
pillow = "11.0.0"
platformdirs = "4.3.6"
prometheus-client = "0.21.0"
prompt-toolkit = "3.0.48"
psutil = "6.1.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pycparser = "2.22"
pygments = "2.18.0"
pyparsing = "3.2.0"
python-dateutil = "2.9.0.post0"
python-json-logger = "2.0.7"
pyyaml = "6.0.2"
pyzmq = "26.2.0"
referencing = "0.35.1"
requests = ">=2.32.4"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rpds-py = "0.21.0"
scipy = "1.14.1"
send2trash = "1.8.3"
setuptools = "78.1.1"
six = "1.16.0"
sniffio = "1.3.1"
soupsieve = "2.6"
stack-data = "0.6.3"
sympy = "1.13.3"
terminado = "0.18.1"
tinycss2 = "1.4.0"
tokenize-rt = "6.1.0"
tornado = "^6.5.0"
traitlets = "5.14.3"
types-python-dateutil = "2.9.0.20241003"
uri-template = "1.3.0"
urllib3 = "2.5.0"
wcwidth = "0.2.13"
webcolors = "24.11.1"
webencodings = "0.5.1"
websocket-client = "1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
